# CP_uCon

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
src/: error.rs  inputs.rs  lcd.rs  main.rs  pwm_fan.rs  stoptimer.rs
